# OOP-C-

./: Board.cpp  Board.h  CMakeLists.txt  CircularBuffer.sln  CircularBuffer.vcxproj  CircularBuffer.vcxproj.filters  GameOfLife.cpp  GameOfLife.h  buffer.cpp  buffer.h  countWordsClass.cpp  countWordsClass.h  head.h  main.cpp  nsu_OOP_lab2.sln  nsu_OOP_lab2.vcxproj  nsu_OOP_lab2.vcxproj.filters  osi  test.cpp  информация о программе.txt
x64/Debug/: CircularBuffer.exe.recipe  CircularBuffer.ilk  CircularBuffer.vcxproj.FileListAbsolute.txt  CircularBufferTests.exp  CircularBufferTests.lib  UnitTest1.exp  UnitTest1.lib  nsu_OOP_lab2.exe.recipe  nsu_OOP_lab2.ilk  nsu_OOP_lab2.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/CircularBuffer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CircularBuffer.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/nsu_OOP_lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  nsu_OOP_lab2.lastbuildstate
